[project]
name = "rag-example-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.0"

dependencies = [
    "ibm-watsonx-ai==0.2.6",
    "langchain==0.1.16",
    "langchain-community==0.0.34",
    "langchain-openai==0.1.3",
    "langchain-ibm==0.1.4",
    "transformers==5.2.0",
    "huggingface-hub==1.4.1",
    "sentence-transformers==5.2.3",
    "chromadb",
    "wget==3.2",
    "torch",
    "openai==1.58.0",
    "ruff>=0.3.0",
    "gradio==6.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
